@@ -392,6 +392,7 @@ name|buffer
 operator|==
 literal|null
 condition|)
+block|{
 name|buffer
 operator|=
 operator|new
@@ -401,6 +402,12 @@ name|BUFFER_SIZE
 index|]
 expr_stmt|;
 comment|// allocate buffer lazily
+name|seekInternal
+argument_list|(
+name|bufferStart
+argument_list|)
+expr_stmt|;
+block|}
 name|readInternal
 argument_list|(
 name|buffer
@@ -540,41 +547,31 @@ operator|.
 name|clone
 argument_list|()
 decl_stmt|;
-if|if
-condition|(
-name|buffer
-operator|!=
-literal|null
-condition|)
-block|{
 name|clone
 operator|.
 name|buffer
 operator|=
-operator|new
-name|byte
-index|[
-name|BUFFER_SIZE
-index|]
+literal|null
 expr_stmt|;
-name|System
-operator|.
-name|arraycopy
-argument_list|(
-name|buffer
-argument_list|,
-literal|0
-argument_list|,
 name|clone
 operator|.
-name|buffer
-argument_list|,
-literal|0
-argument_list|,
 name|bufferLength
-argument_list|)
+operator|=
+literal|0
 expr_stmt|;
-block|}
+name|clone
+operator|.
+name|bufferPosition
+operator|=
+literal|0
+expr_stmt|;
+name|clone
+operator|.
+name|bufferStart
+operator|=
+name|getFilePointer
+argument_list|()
+expr_stmt|;
 return|return
 name|clone
 return|;
